Version 1.3.1
-------------

* Actually fix plugin on Django 1.10 (Remove patterns import)

-------------

* Fix plugin on Django 1.10

Version 1.2.0
-------------

* Versioning Introduced