@@ -1,3 +1,8 @@
+master
+------
+
+* Add serialize method
+
 Version 1.3.1
 -------------
 
